<resources>
    <string name="app_name">SailStart</string>

    <!--    <string name="next_mark">Next Mark</string>-->
    <!--    <string name="latitude_label">Latitude</string>-->
    <!--    <string name="longitude_label">Longitude</string>-->
    <!--    <string name="speed_label">Speed</string>-->
    <!--    <string name="heading_label">Heading</string>-->
    <!--    <string name="distance_label">Distance to Mark</string>-->
    <!--    <string name="bearing_label">Bearing to Mark</string>-->
    <!--    <string name="last_update_time_label">Time since last update</string>-->
    <!--    <string name="accuracy">Accuracy</string>-->
    <!--    <string name="time_to_mark_label">Time to Mark</string>-->

    <string name="start_updates">Start updates</string>
    <string name="stop_updates">Stop updates</string>

    <string name="location_settings_inadequate_warning">The location settings on the device are not
        adequate to run this sample. Fix in Settings.</string>

    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="time">Time</string>
    <string name="eta">ETA</string>
    <string name="none">None</string>
    <string name="speed">Speed</string>
    <string name="heading">Head</string>
    <string name="lt"><![CDATA[<]]></string>
    <string name="gt"><![CDATA[>]]></string>
    <string name="start"></string>
    <string name="sync"></string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="a_mark">A Mark</string>
    <string name="bearing">Bear</string>>
    <string name="kts">Speed\nkts</string>
    <string name="nm">nm</string>
    <string name="_105">-105</string>
    <string name="discrepancy">Discrepancy</string>
    <string name="dist_to_mark">Dist to Mark</string>
    <string name="distance">Dist</string>
    <string name="accuracy">Accuracy</string>
    <string name="m">- m</string>
    <string name="countdown">-15\'59\"</string>
    <string name="time_to_start">Time to Start</string>
    <string name="time_to_line">Time to Line</string>
    <string name="early_late">Early/Late</string>

</resources>
