<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/course_name"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center_horizontal"
        android:text="@string/none"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintEnd_toStartOf="@+id/next_mark_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/next_mark_name"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center_horizontal"
        android:text="@string/a_mark"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/course_name"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/heading_title"
        android:layout_width="72dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="48dp"
        android:gravity="center"
        android:text="@string/heading"
        android:textColor="@color/titles"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/course_name" />

    <TextView
        android:id="@+id/heading_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/heading"
        android:textSize="56sp"
        app:layout_constraintStart_toEndOf="@id/heading_title"
        app:layout_constraintTop_toBottomOf="@+id/course_name" />

    <TextView
        android:id="@+id/bearing_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="172dp"
        android:layout_marginLeft="172dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/bearing"
        android:textSize="56sp"
        app:layout_constraintStart_toEndOf="@+id/heading_text"
        app:layout_constraintTop_toBottomOf="@+id/next_mark_name" />

    <TextView
        android:id="@+id/bearing_title"
        android:layout_width="72dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:gravity="center"
        android:text="@string/bearing"
        android:textColor="@color/titles"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.953"
        app:layout_constraintStart_toEndOf="@+id/bearing_text"
        app:layout_constraintTop_toBottomOf="@+id/next_mark_name" />

    <TextView
        android:id="@+id/speed_title"
        android:layout_width="72dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/kts"
        android:textColor="@color/titles"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/speed_text"
        app:layout_constraintEnd_toStartOf="@+id/speed_text"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/speed_text" />

    <TextView
        android:id="@+id/speed_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/speed"
        android:textSize="56sp"
        app:layout_constraintEnd_toStartOf="@id/distance_text"
        app:layout_constraintStart_toEndOf="@id/speed_title"
        app:layout_constraintTop_toBottomOf="@+id/heading_text" />

    <TextView
        android:id="@+id/distance_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:gravity="center"
        android:text="@string/distance"
        android:textSize="56sp"
        app:layout_constraintEnd_toStartOf="@+id/dist_title"
        app:layout_constraintStart_toEndOf="@id/speed_text"
        app:layout_constraintTop_toTopOf="@+id/speed_text" />

    <TextView
        android:id="@+id/dist_title"
        android:layout_width="72dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/dist_to_mark"
        android:textColor="@color/titles"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/distance_text" />

    <TextView
        android:id="@+id/dist_unit"
        android:layout_width="72dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/nm"
        android:textColor="@color/titles"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/distance_text"
        app:layout_constraintTop_toBottomOf="@+id/dist_title" />


</androidx.constraintlayout.widget.ConstraintLayout>