<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".RaceStartActivity">

    <TextView
        android:id="@+id/course_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:gravity="center_horizontal"
        android:text="@string/none"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/next_mark_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/next_mark_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center_horizontal"
        android:text="@string/a_mark"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/bearing_text"
        app:layout_constraintEnd_toStartOf="@+id/racing"
        app:layout_constraintStart_toEndOf="@+id/course_name"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/racing"
        style="@android:style/Widget.DeviceDefault.ImageButton"
        android:layout_width="64dp"
        android:layout_height="88dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:adjustViewBounds="false"
        android:background="#00BCD4"
        android:cropToPadding="false"
        android:onClick="next_markS"
        android:scaleType="centerInside"
        android:src="@drawable/start_tick"
        android:text="@string/gt"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/next_mark_name"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/heading_title"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="right"
        android:text="@string/heading"
        android:textColor="@color/titles"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/course_name" />

    <TextView
        android:id="@+id/heading_text"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/heading"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@id/heading_title"
        app:layout_constraintTop_toBottomOf="@+id/course_name" />

    <TextView
        android:id="@+id/bearing_text"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/bearing"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/distance_text"
        app:layout_constraintEnd_toStartOf="@+id/bearing_title"
        app:layout_constraintTop_toBottomOf="@+id/next_mark_name" />

    <TextView
        android:id="@+id/bearing_title"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="left"
        android:text="@string/bearing"
        android:textColor="@color/titles"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/dist_title"
        app:layout_constraintEnd_toStartOf="@id/racing"
        app:layout_constraintTop_toBottomOf="@+id/next_mark_name" />

    <TextView
        android:id="@+id/speed_title"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:text="@string/kts"
        android:textColor="@color/titles"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/speed_text"
        app:layout_constraintEnd_toStartOf="@+id/speed_text"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/speed_text"
        app:layout_constraintVertical_bias="0.568" />

    <TextView
        android:id="@+id/speed_text"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/speed"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@id/speed_title"
        app:layout_constraintTop_toBottomOf="@+id/heading_text" />

    <TextView
        android:id="@+id/distance_text"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/distance"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/dist_title"
        app:layout_constraintTop_toTopOf="@+id/speed_text" />

    <TextView
        android:id="@+id/dist_title"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:gravity="left"
        android:text="@string/distance"
        android:textColor="@color/titles"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/dist_unit"
        app:layout_constraintEnd_toStartOf="@id/racing"
        app:layout_constraintTop_toBottomOf="@id/bearing_title" />

    <TextView
        android:id="@+id/dist_unit"
        android:layout_width="72dp"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:text="@string/nm"
        android:textColor="@color/titles"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@id/racing"
        app:layout_constraintStart_toEndOf="@+id/distance_text"
        app:layout_constraintTop_toBottomOf="@+id/dist_title" />

    <TextView
        android:id="@+id/time_to_start"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center|center_horizontal"
        android:text="@string/countdown"
        android:textSize="96sp"
        app:layout_constraintBottom_toBottomOf="parent
"
        app:layout_constraintEnd_toStartOf="@id/time_plus"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/sync" />

    <Button
        android:id="@+id/start_clock"
        android:layout_width="64dp"
        android:layout_height="88dp"
        android:layout_marginBottom="16dp"
        android:background="#2FBF34"
        android:gravity="center|center_horizontal|center_vertical"
        android:onClick="start_clock"
        android:src="@drawable/start_tick"
        android:text="Go"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/sync"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/sync"
        android:layout_width="64dp"
        android:layout_height="88dp"
        android:background="#CDDC39"
        android:onClick="sync_clock"
        android:src="@drawable/sync_clock"

        android:textColor="@color/black"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/start_time_early_late_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/early_late"
        android:textColor="@color/titles"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/start_time_early_late"
        app:layout_constraintEnd_toStartOf="@id/time_to_line_title"
        app:layout_constraintStart_toEndOf="@+id/start_clock" />

    <TextView
        android:id="@+id/start_time_early_late"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/countdown"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@id/time_to_start"
        app:layout_constraintEnd_toStartOf="@id/time_to_line"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/start_clock" />

    <TextView
        android:id="@+id/time_to_line_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/time_to_line"
        android:textColor="@color/titles"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/time_to_line"
        app:layout_constraintEnd_toStartOf="@+id/time_plus"
        app:layout_constraintStart_toEndOf="@+id/start_time_early_late_title" />

    <TextView
        android:id="@+id/time_to_line"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/countdown"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@id/time_to_start"
        app:layout_constraintEnd_toStartOf="@+id/time_plus"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/start_time_early_late" />

    <Button
        android:id="@+id/time_plus"
        android:layout_width="72dp"
        android:layout_height="96dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center"
        android:onClick="time_plus"
        android:text="@string/plus"
        android:textColor="@color/black"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/time_minus"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/time_minus"
        android:layout_width="72dp"
        android:layout_height="96dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:onClick="time_minus"
        android:text="@string/minus"
        android:textColor="@color/black"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>